fixing gaps

--- a/app/assets/stylesheets/tatoos.scss
+++ b/app/assets/stylesheets/tatoos.scss
@@ -14,7 +14,7 @@
 }
 .tatoo-inner a img {
   width: 106%;
-  margin: -25% -3%;
+  margin: -25% -4%;
 }
 .buy-tatoo {
 	margin: 10px;
